syntax = "proto3";

package rivet.backend.pkg.cf_custom_hostname.msg.create;

import "proto/common.proto";

/// name = "msg-cf-custom-hostname-create"
/// parameters = [
/// 	{ name = "namespace_id" },
/// 	{ name = "hostname" },
/// ]
message Message {
	rivet.common.Uuid namespace_id = 1;
	string hostname = 2;
	bool bypass_pending_cap = 3;
}

